--- a/src/app/room-details/room-details.component.html
+++ b/src/app/room-details/room-details.component.html
@@ -6,16 +6,16 @@
     <label><b>Name </b></label> {{room.name}}
   </div>
   <div>
-    <label><b> date</b></label> {{room.date}}
+    <label><b>Date</b></label> {{room.date}}
   </div>
   <div>
-    <label><b> startHour</b></label> {{room.startHour}}
+    <label><b>Start Hour</b></label> {{room.startHour}}
   </div>
     <div>
-    <label><b> endHour</b></label> {{room.endHour}}
+    <label><b>End Hour</b></label> {{room.endHour}}
   </div>
 </div>
 
 <br>
 <br>
-<button (click)="list()" class="btn btn-primary">Back to Room List</button><br>
+<button (click)="list()" class="btn btn-primary btn-sm">Back to Room List</button><br>
