--- a/src/app/room-list/room-list.component.html
+++ b/src/app/room-list/room-list.component.html
@@ -3,13 +3,13 @@
       <h2>Room List</h2>
     </div>
     <div class="panel-body">
-      <table class="table table-striped">
+      <table class="table table-hover">
         <thead>
           <tr>
-            <th>name</th>
-            <th>date</th>
-            <th>startHour</th>
-            <th>endHour</th>
+            <th>Name</th>
+            <th>Date</th>
+            <th>Start Hour</th>
+            <th>End Hour</th>
             <th>Actions</th>
           </tr>
         </thead>
@@ -19,9 +19,9 @@
             <td>{{room.date}}</td>
             <td>{{room.startHour}}</td>
             <td>{{room.endHour}}</td>
-            <td><button (click)="deleteRoom(room.id)" class="btn btn-danger">Delete</button>
-              <button (click)="updateRoom(room.id)" class="btn btn-info" style="margin-left: 10px">Update</button>
-                <button (click)="roomDetails(room.id)" class="btn btn-info" style="margin-left: 10px">Details</button>
+            <td><button (click)="deleteRoom(room.id)" class="btn btn-danger btn-sm">Delete</button>
+              <button (click)="updateRoom(room.id)" class="btn btn-primary btn-sm" style="margin-left: 10px">Update</button>
+                <button (click)="roomDetails(room.id)" class="btn btn-secondary btn-sm" style="margin-left: 10px">Details</button>
             </td>
           </tr>
         </tbody>
