--- a/src/app/update-room/update-room.component.html
+++ b/src/app/update-room/update-room.component.html
@@ -7,20 +7,20 @@
     </div>
 
     <div class="form-group">
-      <label for="name">date</label>
+      <label for="name">Date</label>
       <input type="text" class="form-control" id="date" required [(ngModel)]="room.date" name="date">
     </div>
 
     <div class="form-group">
-      <label for="name">start Hour</label>
+      <label for="name">Start Hour</label>
       <input type="text" class="form-control" id="startHour" required [(ngModel)]="room.startHour" name="startHour">
     </div>
 
     <div class="form-group">
-      <label for="name">end Hour</label>
+      <label for="name">End Hour</label>
       <input type="text" class="form-control" id="endHour" required [(ngModel)]="room.endHour" name="endHour">
     </div>
-
-    <button type="submit" class="btn btn-success">Submit</button>
+    <br>
+    <button type="submit" class="btn btn-success btn-sm">Submit</button>
   </form>
 </div>
