More improvments at Front End

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,9 +25,10 @@
     </div>
   </div>
 </div>
-
-<footer class="footer">
+<br>
+<br>
+<footer class="footer navbar-fixed-bottom">
   <div class="container">
-      <span>Gerenciador de Sala de reuniões - Angular as FrontEnd </span>      
+      <span>Meeting Room Manager - Angular as FrontEnd </span>      
   </div>
 </footer>
