Improvements at create and update components

--- a/src/app/update-room/update-room.component.html
+++ b/src/app/update-room/update-room.component.html
@@ -21,6 +21,6 @@
       <input type="text" class="form-control" id="endHour" required [(ngModel)]="room.endHour" name="endHour">
     </div>
     <br>
-    <button type="submit" class="btn btn-success btn-sm">Submit</button>
+      <button type="submit" class="btn btn-success btn-sm">Update</button>
   </form>
 </div>
